apps/hello/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  namespace: apps
  labels: { app: hello }
spec:
  replicas: 2
  selector:
    matchLabels: { app: hello }
  template:
    metadata:
      labels: { app: hello }
    spec:
      imagePullSecrets:
        - name: harbor-pull-secret
      containers:
        - name: hello
          image: harbor.airgap.local/apps/hello:bootstrap
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet: { path: /healthz, port: http }
            periodSeconds: 5
          livenessProbe:
            httpGet: { path: /healthz, port: http }
            periodSeconds: 15
          resources:
            requests: { cpu: 20m, memory: 32Mi }
            limits:   { cpu: 200m, memory: 128Mi }
